modified external link

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ http://ascii.mastervb.net/ -->
 
 	<div class="siteDescription">
 		<p>
-			This site was developed as a demonstration exercise, part of the <a href="http://hackeryou.com/courses/fall-bootcamp/" target="_blank">HackerYou</a> web development program. The goal was to re-create and code a coffee shop site based on an existing design. Design source is <a href="http://www.bluebottlecoffee.com/">Blue Bottle Coffee</a>
+			This site was developed as a demonstration exercise, part of the <a href="http://hackeryou.com/courses/fall-bootcamp/" target="_blank">HackerYou</a> web development program. The goal was to re-create and code a coffee shop site based on an existing design. Design source is <a href="http://www.bluebottlecoffee.com/" target="_blank">Blue Bottle Coffee</a>
 		</p>
 	</div>
 	
